removed overflow-hidden issue

--- a/src/index.css
+++ b/src/index.css
@@ -19,10 +19,13 @@ body {
   margin: 0px;
   background: #1d1d1d;
 }
-h1 {
-    font-size: 2.4rem;
+h2 {
+    font-size: 1rem;
     font-weight: 900;
     color: #fafafa;
+    margin-top: 3em;
+    margin-bottom: 0.5em;
+    text-transform: uppercase;
 }
 .bg-white {
   background-color: transparent !important;
@@ -150,10 +153,6 @@ nav ul.open {
 }
 
 @media screen and (max-width: 950px) {
-body {
-  overflow-y: hidden;
-  overflow-x: hidden;
-}
 .navContainer {padding: 0px 70px;}
 .sm\:grid-cols-12 {
   grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
@@ -246,9 +245,6 @@ ul a {
 }
 
 @media screen and (max-width: 720px) {
-  body {
-    overflow-y:visible;
-   }
   .sm\:py-10 {
     padding-top: 5.5rem !important;
     padding-bottom: 5.5rem !important;
@@ -328,7 +324,7 @@ nav ul a {
 .my-20 {
   margin-bottom: 8rem ;
 }
-.hero-intro {
+h1 {
   color: #ffffff;
   font-size: 2rem;
   font-weight: 800;
@@ -340,16 +336,22 @@ nav ul a {
 #content-intro {
   color: #ffffff;
   font-size: 1rem;
-  margin-bottom: 3em;
-  margin-top: 2em;
+  margin-top: -1em;
 }
 .job-title {
   margin-bottom: -1em;
   font-size: 1.1rem;
   color: #ffffff;
+  margin-top: 1.5em;
 }
 .job-desc {
   font-size: 0.9rem;
+  margin-bottom: 0.5em;
+  margin-top: 2em;
+}
+.job-content {
+  font-size: 0.9rem;
+  margin-bottom: 1em;
 }
 .contact-icon {
   border: 1px solid #ffffff;
@@ -368,6 +370,17 @@ nav ul a {
   gap: 0.5rem;
   text-align: center;
   justify-content: center;
+}
+.pill {
+  background: #c3c5ca;
+  color: #292929;
+  border-radius: 100px;
+  padding: 5px;
+  padding-left: 1em;
+  padding-right: 1em;
+  font-size: 0.8rem;
+  margin-right: 5px;
+  font-weight: 700;
 }
 
 @media screen and (max-width: 1800px) {
